# hsem

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .ruff.toml  AGENTS.md  CLAUDE.md  CODE_QUALITY_STANDARDS.md  CODE_QUALITY_UPDATES.md  FIX_GITHUB_ACTIONS.ps1  LICENSE  README.md  _commit_msg.txt  commit_msg.txt  hacs.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  requirements_lint.txt  requirements_test.txt  requirements_typing.txt  setup.py  sonar-project.properties  test-results.xml  tox.ini  vulture_whitelist.py
.agents/skills/hsem-canonical-helpers/: SKILL.md
.agents/skills/hsem-code-quality/: SKILL.md
.agents/skills/hsem-doc-sync/: SKILL.md
.agents/skills/hsem-ha-compliance/: SKILL.md
.agents/skills/hsem-ha-quality/: SKILL.md
.agents/skills/hsem-huawei-wiring/: SKILL.md
.agents/skills/hsem-planner-change/: SKILL.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/scripts/: com.hsem.agent-relay.plist.template  devcontainer-agent-bridge.sh  install-agent-relay.sh  start-agent-relay.py  start-agent-relay.sh
.github/: copilot-instructions.md  dependabot.yml  memories.md  pr_body.md  release-drafter.yml  sync-labels.yml
.github/scripts/: generate_wiki_sidebar.py
.github/workflows/: auto-label.yml  check-on-hold.yml  defender-for-devops.yml  format-code.yml  hacs-validate.yml  license-compliance-checker.yml  license-compliance-checker.yml.disabled  lint-and-test.yml  pyre.yml  pyre.yml.disabled  release-drafter.yml  release.yml  safety-check.yml  semantic-title.yml  sonarcloud.yml  sonarcloud.yml.disabled  sync-labels.yaml  sync-wiki.yml  tests.yml  tests.yml.disabled  update-uv-lock.yml
.rules/: ha-development-rules.md
custom_components/: __init__.py
custom_components/hsbo/: __init__.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py
custom_components/hsem/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  coordinator_builder.py  datetime_utils.py  diagnostics.py  entity.py  manifest.json  number.py  options_flow.py  select.py  sensor.py  services.py  services.yaml  switch.py  test_dummy.py  time.py
docs/: ADAPTIVE_VS_CURRENT_ANALYSIS.md  INTEGRATION_GUIDE.md  PLANNER_SPEC_TEST_COVERAGE.md  POWER_PREDICTION_EXECUTIVE_SUMMARY.md  POWER_PREDICTION_IMPROVEMENTS.md  POWER_PREDICTION_VISUAL_GUIDE.md  QUICK_SUMMARY.md  README.md  SENSOR_IMPROVEMENTS_PRACTICAL_GUIDE.md  architecture-overview.md  battery-charging-economics.md  candidate-generation.md  config-flow-reference.md  consumption-prediction.md  cost-function-math.md  dashboard-setup.md  dashboard.yaml  energy-accounting.md  ev-charge-plan-setup.md  ev-optimal-charging-template.md  ev-surplus-charging-automation.md  forecast-accuracy-tracking.md  home.md  hsem-architecture-overview.md  hsem-candidate-generation.md  hsem-config-flow-reference.md  hsem-consumption-prediction.md  hsem-cost-function-math.md  hsem-energy-accounting.md  hsem-planner-guide.md  hsem-planner-spec.md  hsem-price-interval-semantics.md  hsem-safety-modes.md  hsem-sensors-reference.md  hsem-services-reference.md  hsem-troubleshooting-guide.md  huawei_entities.md  index.md  milp-optimization.md  planner-guide.md  (+7 more)
docs/adr/: ADR-001-planner-extraction.md  ADR-002-slot-model.md  ADR-003-cost-scoring.md  ADR-004-inverter-safety.md  ADR-005-forecast-confidence.md  README.md  adr-001-planner-extraction.md  adr-002-slot-model.md  adr-005-forecast-confidence.md  adr-006-solar-correction.md  architecture-decision-records.md  index.md
scripts/: backfill_stats.py  develop  setup  sync.bat
tests/: __init__.py  conftest.py  const.py  test_battery_schedule.py  test_capacity_learner.py  test_config_flow_migrate_unique_ids.py  test_config_flow_single_entry_guard.py  test_config_flow_state_isolation.py  test_config_flow_user_journeys.py  test_config_validation.py  test_convert_to_float_none.py  test_coordinator.py  test_coordinator_milp_gating.py  test_cross_day_charge_windows.py  test_daily_plan_vs_actual.py  test_datetime_utils.py  test_degraded_mode.py  test_diagnostics_dump.py  test_dst_transitions.py  test_entity_platform_classes.py  test_exception_handling.py  test_excess_battery_export.py  test_excess_export_negative_consumption.py  test_flow_helpers.py  test_forecast_tracker.py  test_ha_mock_integration.py  test_hourly_price_expansion.py  test_house_consumption_sensor_lifecycle.py  test_huawei_service_calls.py  test_import_integrity.py  test_interval_filtering.py  test_listener_cleanup.py  test_logger_no_file_handler.py  test_midnight_rollover.py  test_months_validation.py  test_p0_regression_suite.py  test_platform_entity_refactor.py  test_power_thresholds.py  test_prediction_tracker.py  test_price_interval_semantics.py  (+10 more)
tests/custom_sensors/: test_financial_sensors.py  test_ocpp_server.py  test_working_mode_sensor.py
tests/fixtures/: default_config.yaml
tests/ml/: test_consumption_predictor.py
tests/models/: test_financial_tracker.py  test_savings_tracker.py
tests/planner/: __init__.py  fixtures.py  test_48h_second_day.py  test_arbitrage_grid_charge.py  test_candidate_generation.py  test_candidate_generator_placement.py  test_charge_scheduler_capacity.py  test_concentrate_discharge.py  test_cost_function.py  test_cost_score_split.py  test_cycle_cost_guard.py  test_ev_future_charge_value.py  test_ev_past_target_config_wiring.py  test_ev_planned_load.py  test_hysteresis.py  test_invariants.py  test_mid_hour_planner.py  test_milp_ev.py  test_milp_optimizer.py  test_missing_tomorrow_data.py  test_multi_day_price_preservation.py  test_plan_explanation.py  test_planner_harness.py  test_planning_horizon.py  test_roundtrip_efficiency.py  test_session_ev.py  test_slot_ownership.py  test_soc_simulation.py  test_solar_charge_no_double_count.py  test_window_hysteresis.py
tests/sensors/: __init__.py  test_applier.py  test_hourly_data_populator.py  test_plan_explanation_sensor.py  test_recommendation_resolver.py  test_state_collector.py
tests/utils/: test_charge_rate_learner.py  test_dynamic_floor.py  test_weekday_profile.py
(+188 files in other folders)
